TAG: coordload-tr7894-1
DATE: 09/15/2006
STAFF: sc
CHANGES: TR7894 - mgiconfig changes
1) renamed  coordload.config.default to coordload.config.template
2) added README - how to add a new coordload
3) added Install 
4) updated all config files and scripts to use mgiconfig
5) qtlcoordload.sh - factored out repeated code, now calls coordload.sh
6) qtl_coordload.config.default - updated to use mgiconfig 
7) qtl_noteload.config - removed NOTELOAD as this is set in noteload itself
   (and will have change its name in noteload when we get to it)
8) bin/*.sh - updated to use mgiconfig - reorganized the checking
   and sourceing of config files because no longer have common.config

TAG: coordload-tr7894-BP
DATE: 09/14/2006
STAFF: sc
CHANGES: Branch point tag for mgiconfig changes

TAG: coordload-3-5-1-2
DATE: 09/12/2006
STAFF: lec
CHANGES: 
1) build 36

TAG: coordload-3-5-1-1
DATE: 09/06/2006
STAFF: lec
CHANGES: 
1) build 36; merge

TAG: coordload-build36-3
DATE: 08/23/2006
STAFF: lec
CHANGES: 
1) build 36

TAG: coordload-build36-2
DATE: 08/22/2006
STAFF: lec
CHANGES: 
1) build 36

TAG: coordload-build36-1
DATE: 08/16/2006
STAFF: lec
CHANGES: 
1) build 36

TAG: coordload-build36-BP
DATE: 08/16/2006
STAFF: lec
CHANGES: 
1) branch point tag for build 36

TAG: coordload-3-5-0-2
DATE: 05-05-2006
STAFF: lec
RELEASE: MGI3.5
CHANGES: 
1) bug fix removed prepending of `pwd` on config file parameters in coordload.sh
2) sharon had commented this out...we decided to just remove it

TAG: coordload-3-5-0-1
DATE: 05-04-2006
STAFF: sc
RELEASE: MGI3.5
CHANGES: 
1) bug fix removed prepending of `pwd` on config file parameters in coordload.sh

TAG: coordload-1-0-5
TAG: coordload-1-0-4
DATE: 11-19-2004
STAFF: sc
RELEASE: dev
CHANGES: tr6336
1) coordload.config.default - new common config vars

TAG: coordload-1-0-3
DATE: 11-17-2004
STAFF: sc
RELEASE: dev
CHANGES: TR6047 dla refactoring
1) coordload.config.defaults - updated with new class package paths

TAG: coordload-1-0-2
DATE: 11-10-2004