@@ -1,3 +1,11 @@
+TAG: coordload-tr7894-2
+DATE: 10/06/2006
+STAFF: sc
+CHANGES:
+1) coordload.sh - use DLAJobstreamFunctions shutDown and checkStatus
+    instead of defining own. change some tee to >>
+2) qtlcoordload.sh - change som tee to >>
+
 TAG: coordload-tr7894-1
 DATE: 09/15/2006
 STAFF: sc
